matplotlib and plotly examples

--- a/lectures.tex
+++ b/lectures.tex
@@ -3371,7 +3371,15 @@ List comprehension (абстракция списков, включение сп
   union = tel | {'guido': 1234, 'linus': 5678}
 \end{minted}
 
-Списки и словари можно использовать для подстановки аргументов функций.
+Зачем это всё нужно? Парадигма Data Oriented Programming (DOP). Records as maps. Ничего не контролируем во время компиляции, но
+легко расширяем типы и интуитивный ввод-вывод и обмен данными (JSON). Примеры:
+\inputminted{python}{romanNumbers.py}
+
+(Обратите внимание, что электроны это не список частиц, общие свойства вынесены).
+
+\subsubsection{Matplotlib}
+
+Списки и словари можно использовать для подстановки аргументов функций, а сами аргументы --- именованные.
 \begin{minted}{python}
     def print2(x, y):
       print(x + y)
@@ -3383,26 +3391,172 @@ List comprehension (абстракция списков, включение сп
     print2(*xs) # print2(1,2)
     ys = {'y': 5, 'x': 6}
     print2(**ys) # 11
- 
-    # пример посложнее
-    import matplotlib.pyplot as mpl
-    from math import *
-    xs = [0.1 * i for i in range(100)]
-    ys = [sin(x) for x in xs]
-    # keyword arguments
-    kwargs = {'color': 'r', 'linewidth': 0.7}
-    plot(x, y, **kwargs)
 \end{minted}
 
-Зачем это всё нужно? Парадигма Data Oriented Programming (DOP). Records as maps. Ничего не контролируем во время компиляции, но
-легко расширяем типы и интуитивный ввод-вывод и обмен данными (JSON). Примеры:
-\inputminted{python}{romanNumbers.py}
+Пример построения графика в matplotlib. Результат --- на рисунке~\ref{simple_matplotlib_plot}.
+\inputminted{python}{simple_matplotlib_plot.py}
 
-(Обратите внимание, что электроны это не список частиц, общие свойства вынесены).
+\begin{figure}
+	\includegraphics[width=1\linewidth]{simple_matplotlib_plot.pdf}
+    \caption{\label{simple_matplotlib_plot}Matplotlib.}
+\end{figure}
 
 \subsection{Plotly and plotly.express}
 
+Plotly --- изначально библиотека для построения интерактивных графиков, написанная на javascript. В javascript внутренний формат
+представления данных --- JSON, поэтому график в plotly --- это тоже JSON, который отображается (строится, рендерится) с помощью plotly.js.
+Его достаточно легко читать, и можно даже писать вручную. Пример:
+\begin{minted}{json}
+{
+    "layout": {"title": "A line plot"}
+    "data": [{"x": [0,0.5,1,2]
+              "y": [0,0.25,1,4]
+              "type": "line"}]
+}
+\end{minted}
+Такой подход открывает очень широкие возможности по переносимости: поддержка JSON есть практически во всех языках программирования,
+соответственно, и графики для Plotly можно строить почти что где угодно (javascript, python, Scala,...).
+
+Однако для того, чтобы графики было строить легче, в Python plotly предлагает простой интерфейс --- plotly express. Пример:
+\inputminted{python}{simple_plotly_express.py}
+
+\textit{Задача} Множество Жулиа.
+
+Есть комплексное отображение:
+\begin{equation}
+    f(z) = z^2 - 0.4 + 0.6 i,
+\end{equation}
+И есть последовательность
+\begin{equation}
+    g(n) = f^n, \; f(f( ...)(z), \; n \text{ раз}.
+\end{equation}
+Задача: построить распределение $n: \; abs(g(n)(z)) <= 2$ в плоскости $z$ ($x \in
+[-2, 2]$, $y \in [-2, 2]$. Можно взять $400 \times 300$ точек, $150$ итераций.
+
+Замечания по задаче (если использовать matplotlib).
+\begin{minted}{python}
+z * z - 0.4 + 0.6j
+plt.imshow(n - xys, origin = "lower", cmap = "cubehelix", interpolation = "none",
+        extent = (x1, x2, y1, y2))
+plt.clim(-n * 1 / 8, n)
+plt.colorbar(label = r"$n$")
+plt.xlabel(r"$\operatorname{Re} \, z$")
+plt.ylabel(r"$\operatorname{Im} \, z$")
+plt.tight_layout()
+plt.savefig("julia.pdf")
+\end{minted}
+
+\begin{figure}
+	\includegraphics[width=0.8\linewidth]{plotly_imshow.png}
+    \caption{\label{plotly-imshow}Plotly imshow.}
+\end{figure}
+
+Colormap (heat map) на Plotly. Если данные заданы точками, то стоит использовать density heatmap, которая сама вычисляет функцию
+распределения, если же функция распределения уже вычислена на квадратной сетке, то следует использовать inshow. В примере есть немного
+numpy.
+\inputminted{python}{plotly_imshow.py}
+
+\subsubsection{Вычисление интегралов методом Монте-Карло}
+
+\begin{figure}
+	\includegraphics[width=1\linewidth]{dots-for-monte-carlo.png}
+    \caption{\label{dots-for-monte-carlo}Заполнение фигуры случайными точками, имеющими равномерное
+    распределение на плоскости (слева) и точками, находящимися в узлах регулярной прямоугольной
+    сетки (справа).}
+\end{figure}
+
+Как мы увидим, не всегда для вычисления интегралов достаточно использовать известный метод
+прямоугольников или метод трапеций. И основная проблема здесь --- невысокая точность при вычислении
+интегралов в пространстве высокой размерности. Например, попробуем оценить точность метода
+прямоугольников при вычислении площади под прямой $y = x$ на отрезке $x \in [0, 1]$. Если для
+вычисления мы возьмём $n$ прямоугольников, то ошибка вычисления интеграла, как легко вычислить,
+будет порядка $O(1/n)$ ($n$ <<краешков>> прямоугольников площадью $\sim 1/n^2$ каждый попадают над
+или под кривую, для которой мы вычисляем площадь). Если мы захотим вычислить методом
+прямоугольников площадь под косо располозенной плоскостью, над основанием, разбитым на $n \times n$
+прямоугольников (по осям $x$ и $y$), то ошибка снова будет порядка $O(1/n)$. Однако при этом
+количество прямоугольников уже $\sim n^2$. Экстраполируя наши выводы на $D$-мерный интеграл, можно
+заметить, что общее число прямоугольников ($\sim n^D$), и общее число вызовов интегрируемой
+функции, растёт экспоненциально с ростом $D$ при сохранении определённого уровня точности ($\sim
+1/n$). Это делает метод прямоугольников неприменимым в пространствах большой размерности. Наверное,
+в этот момент стоит вспомнить, что в физике (и не только) встречаются задачи и в бесконечномерном
+пространстве.
+
+Метод Монте-Карло, который мы рассмотрим --- это настоящее математическое чудо, поскольку не
+теребует экспоненциального роста числа точек в зависимости от размерности, при том, что он, на
+первый взгляд, очень похож на метод прямоугольников. Суть простого (геометрического) метода
+Монте-Карло состоит в следующем.  <<Накидываем>> (случайно! равномерно!) точки на плоскость, на
+которой проведена кривая, площадь под которой мы хотим вычислить. Считаем те точки, что попали под
+кривую. Отношение их к общему числу точек есть отношение площади области, в которой генерируем
+точки, к площади под кривой. Если бы мы распределяли точки не случайным образом, а, скажем, ставили
+бы их в узлах прямоугольной сетки (см. рисунок~\ref{dots-for-monte-carlo}), и использовали в методе
+Монте-Карло, то получили бы те же проблемы, что и в методе прямоугольников.  <<Случайность>> точек
+позволяет избавиться от этих проблем --- как мы покажем позже, ошибка метода Монте-Карло зависит то
+количества точек, $N$, как $O(1/\sqrt{N})$. Стоит отметить, что в эту формулу размерность
+пространства вообще никак не входит.  Таким образом, в среднем для уменьшения ошибки вдвое нам
+нужно увеличить число точек в 4 раза, в то время как в случае использования метода прямоугольников
+нам потребовалось бы вдвое увеличить разбиение по каждой оси, при этом общее число точек выросло бы
+в $2^D$ раз.
+
+\textit{Задача о вычислении объёма многомерного шара}. Требуется написать программу, вычисляющую с
+помощью геометрического метода Монте-Карло объём $V$ шара единичного радиуса в пространстве
+размерности $D$ и построить график $V(D)$ вплоть до $D = 10$. Можно заметить, что ошибка метода
+(обозначим её $\varepsilon$), то есть разница вычисленного и реального объёмов, есть случайная
+величина. Для $D = 2$ и $D = 3$ требуется построить зависимость среднеквадратичного отклонения
+$\sigma$ для случайной величины $\varepsilon$ от числа точек, $N$, и показать, что
+$\sigma_\varepsilon \sim 1 / \sqrt{N}$.
+
+Есть не-геометрическая вариация метода Монте-Карло для вычисления интегралов, ещё больше похожая на
+метод прямоугольников, но, тем не менее, обладающая той же точностью, что и геометрический метод. А
+именно, интеграл от функции $f(x)$ вычисляется через сумму её значений в случайных точках, имеющих
+равномерное распределение:
+\begin{equation}
+    \int_a^b f(x) \, dx \approx \frac{(b - a)}{N} \sum_{i=1}^N f(x_i).
+\end{equation}
+В методе прямоугольников используется та же формула, но точки распределены на отрезке $[a, b]$ с
+постоянным шагом.
+
+Интересно, что метод Монте-Карло в завуалированном виде встречается и в чистой математике. Так,
+известный критерий Вейля говорит, что распределение чисел $x_j$ равномерно на $(0, 1)$ если и
+только если для всех натуральных $\ell$ выполнено
+\begin{equation}
+    \lim_{N \to \infty} \frac{1}{N} \sum_{j = 1}^N \exp(2 \pi i \ell x_j) = 0.
+\end{equation}
+Видно, что этот критерий в определённом смысле эквивалентен утверждению, что <<интеграл от функции
+$\sin x$ на её периоде равен нулю>>.
+
+\textbf{Центральная предельная теорема} рассматривает ситуацию, очень похожую на задачу о доске
+Гальтона. А именно, пусть случайная величина $x$ есть сумма (независимых!) случайных величин $x_i$,
+которые соизмеримы (то есть, грубо говоря, их средние $\mu_i$ одного порядка, и их дисперсии
+$\sigma_i^2$ одного порядка). Для доски Гальтона, как уже было сказано, смещение равнялось сумме
+случайных величин --- смещений, имеющих одно и то же распределение. Так вот, ЦПТ утверждает, что при $i \gg 1$
+среднее $\mu$ и дисперсия $\sigma^2$ случайной величины $x$ есть сумма средних и дисперсий,
+соответственно, для величин $x_i$,
+\begin{equation}
+    \mu = \sum_i \mu_i, \qquad \sigma^2 = \sum_i \sigma_i^2,
+\end{equation}
+а распределение $x$ имеет гауссов вид, аналогичный~(\ref{heat_equation_mu_sigma_solution}). На
+практике оказывается, что часто даже для двух-трёх случайных величин распределение их суммы очень
+похоже не гауссово. Чтобы <<прочувствовать>> ЦПТ, попробуйте ответить на несколько вопросов.
+
+\textit{Вопрос}. Найдите среднее и дисперсию распределения зёрнышек по корзинкам для доски
+Гальтона, пользуясь ЦПТ.
+
+\textit{Вопрос}. Придумайте контрпримеры для ЦПТ, нарушая то или иное её условие. Например, в
+алгоритме Метрополиса текущее состояние цепи Маркова есть сумма смещений из её предыдущих
+состояний. Почему, тем не менее, алгоритм Метрополиса генерирует распределение, не подчиняющееся
+ЦПТ?
+
+\textit{Вопрос}. Рассмотрите случайную величину $N_{in}$ --- число точек, попавших внутрь фигуры,
+площадь которой мы пытаемся найти, производя интегрирование методом Монте-Карло. Чему равно среднее
+и дисперсия этой случайной величины, как она зависит от общего числа точек $N$? Как ошибка
+интегрирования метода Монте-Карло зависит от $N$ и от размерности пространства?
+
 \subsection{Numpy}
+
+Еще примеры. Оси, подписи, размер, формулы.
+
+generators?
+functools?
 
 Рассмотрим пример цикла на питоне:
 \begin{minted}{python}
@@ -3627,76 +3781,6 @@ plt.xlabel(r"$x$")
 plt.ylabel(r"$f(x)$")
 plt.show()
 \end{minted}
-
-\subsubsection{Вычисление интегралов методом Монте-Карло}
-
-\begin{figure}
-	\includegraphics[width=1\linewidth]{dots-for-monte-carlo.png}
-    \caption{\label{dots-for-monte-carlo}Заполнение фигуры случайными точками, имеющими равномерное
-    распределение на плоскости (слева) и точками, находящимися в узлах регулярной прямоугольной
-    сетки (справа).}
-\end{figure}
-
-Как мы увидим, не всегда для вычисления интегралов достаточно использовать известный метод
-прямоугольников или метод трапеций. И основная проблема здесь --- невысокая точность при вычислении
-интегралов в пространстве высокой размерности. Например, попробуем оценить точность метода
-прямоугольников при вычислении площади под прямой $y = x$ на отрезке $x \in [0, 1]$. Если для
-вычисления мы возьмём $n$ прямоугольников, то ошибка вычисления интеграла, как легко вычислить,
-будет порядка $O(1/n)$ ($n$ <<краешков>> прямоугольников площадью $\sim 1/n^2$ каждый попадают над
-или под кривую, для которой мы вычисляем площадь). Если мы захотим вычислить методом
-прямоугольников площадь под косо располозенной плоскостью, над основанием, разбитым на $n \times n$
-прямоугольников (по осям $x$ и $y$), то ошибка снова будет порядка $O(1/n)$. Однако при этом
-количество прямоугольников уже $\sim n^2$. Экстраполируя наши выводы на $D$-мерный интеграл, можно
-заметить, что общее число прямоугольников ($\sim n^D$), и общее число вызовов интегрируемой
-функции, растёт экспоненциально с ростом $D$ при сохранении определённого уровня точности ($\sim
-1/n$). Это делает метод прямоугольников неприменимым в пространствах большой размерности. Наверное,
-в этот момент стоит вспомнить, что в физике (и не только) встречаются задачи и в бесконечномерном
-пространстве.
-
-Метод Монте-Карло, который мы рассмотрим --- это настоящее математическое чудо, поскольку не
-теребует экспоненциального роста числа точек в зависимости от размерности, при том, что он, на
-первый взгляд, очень похож на метод прямоугольников. Суть простого (геометрического) метода
-Монте-Карло состоит в следующем.  <<Накидываем>> (случайно! равномерно!) точки на плоскость, на
-которой проведена кривая, площадь под которой мы хотим вычислить. Считаем те точки, что попали под
-кривую. Отношение их к общему числу точек есть отношение площади области, в которой генерируем
-точки, к площади под кривой. Если бы мы распределяли точки не случайным образом, а, скажем, ставили
-бы их в узлах прямоугольной сетки (см. рисунок~\ref{dots-for-monte-carlo}), и использовали в методе
-Монте-Карло, то получили бы те же проблемы, что и в методе прямоугольников.  <<Случайность>> точек
-позволяет избавиться от этих проблем --- как мы покажем позже, ошибка метода Монте-Карло зависит то
-количества точек, $N$, как $O(1/\sqrt{N})$. Стоит отметить, что в эту формулу размерность
-пространства вообще никак не входит.  Таким образом, в среднем для уменьшения ошибки вдвое нам
-нужно увеличить число точек в 4 раза, в то время как в случае использования метода прямоугольников
-нам потребовалось бы вдвое увеличить разбиение по каждой оси, при этом общее число точек выросло бы
-в $2^D$ раз.
-
-\textit{Задача о вычислении объёма многомерного шара}. Требуется написать программу, вычисляющую с
-помощью геометрического метода Монте-Карло объём $V$ шара единичного радиуса в пространстве
-размерности $D$ и построить график $V(D)$ вплоть до $D = 10$. Можно заметить, что ошибка метода
-(обозначим её $\varepsilon$), то есть разница вычисленного и реального объёмов, есть случайная
-величина. Для $D = 2$ и $D = 3$ требуется построить зависимость среднеквадратичного отклонения
-$\sigma$ для случайной величины $\varepsilon$ от числа точек, $N$, и показать, что
-$\sigma_\varepsilon \sim 1 / \sqrt{N}$.
-
-Есть не-геометрическая вариация метода Монте-Карло для вычисления интегралов, ещё больше похожая на
-метод прямоугольников, но, тем не менее, обладающая той же точностью, что и геометрический метод. А
-именно, интеграл от функции $f(x)$ вычисляется через сумму её значений в случайных точках, имеющих
-равномерное распределение:
-\begin{equation}
-    \int_a^b f(x) \, dx \approx \frac{(b - a)}{N} \sum_{i=1}^N f(x_i).
-\end{equation}
-В методе прямоугольников используется та же формула, но точки распределены на отрезке $[a, b]$ с
-постоянным шагом.
-
-Интересно, что метод Монте-Карло в завуалированном виде встречается и в чистой математике. Так,
-известный критерий Вейля говорит, что распределение чисел $x_j$ равномерно на $(0, 1)$ если и
-только если для всех натуральных $\ell$ выполнено
-\begin{equation}
-    \lim_{N \to \infty} \frac{1}{N} \sum_{j = 1}^N \exp(2 \pi i \ell x_j) = 0.
-\end{equation}
-Видно, что этот критерий в определённом смысле эквивалентен утверждению, что <<интеграл от функции
-$\sin x$ на её периоде равен нулю>>.
-
-\clearpage
 
 \section{Gradle, Lets-plot и Множество Жyлиа}
 
