--- a/lectures.tex
+++ b/lectures.tex
@@ -3682,6 +3682,11 @@ matplotlib и SciPy.
 
 \inputminted{python}{pandas_tutorial.py}
 
+\subsection{Монады}
+
+\inputminted{scala}{monads.sc}
+
+
 Еще примеры. Оси, подписи, размер, формулы.
 
 generators?
