monads in python

--- a/lectures.tex
+++ b/lectures.tex
@@ -3684,7 +3684,11 @@ matplotlib и SciPy.
 
 \subsection{Монады}
 
+Scala.
 \inputminted{scala}{monads.sc}
+
+Python.
+\inputminted{python}{monads.py}
 
 
 Еще примеры. Оси, подписи, размер, формулы.
