add leetcode 1114 and 11

--- a/lectures.tex
+++ b/lectures.tex
@@ -2742,6 +2742,30 @@ per-element private memory (registers).
 Работает чрезвычайно быстро, может на ноутбучной видеокарте обогнать процессор в
 несколько раз даже при простой архитектуре приложения.
 
+\textit{Задачи для семинарского занятия.} Leetcode
+
+Задача про синхронизацию, 1114, Print in Order.
+Suppose we have a class:
+\begin{minted}{cpp}
+class Foo {
+public:
+  Foo() { ... }
+  public void first() { print("first"); }
+  public void second() { print("second"); }
+  public void third() { print("third"); }
+}
+\end{minted}
+The same instance of Foo will be passed to three different threads. Thread A will call first(), thread B will call second(), and thread C
+will call third(). Design a mechanism and modify the program to ensure that second() is executed after first(), and third() is executed
+after second().
+
+Задача про воду. 11. Container with most water.  You are given an integer array height of length n. There are n vertical lines drawn such
+that the two endpoints of the ith line are (i, 0) and (i, height[i]).  Find two lines that together with the x-axis form a container, such
+that the container contains the most water.  Return the maximum amount of water a container can store.
+
+Решения писать не нужно, но нужно понимать алгоритм, сложность (amortizing) по действиям, сложность по памяти, как писать код (рекурсия,
+цикл, нужен ли хип).
+
 \subsection{Блокчейн, криптовалюты, биткоин (BTC)}
 
 хеш (hash, хеш-сумма).
@@ -2757,6 +2781,20 @@ per-element private memory (registers).
 
 Таким образом, вероятность того, что хеш какой-то структуры (или массива и т. п.) попадёт в наперёд
 заданный узкий интервал, будет маленькой. Одна из самых известных хеш-функций - sha256
+
+Электронная подпись
+
+Представьте себе RSA-шифрование наоборот. Алиса генерирует закрытый и открытый ключи, даёт Бобу
+открытый ключ, но не ждёт зашифрованного сообщения от Боба, а сама закрытым ключом шифрует
+сообщение и передаёт Бобу. Боб, очевидно (как и все вокруг, кто слышал эти сообщения) могут
+расшифровать это сообщение. Зачем это нужно? Если Боб открытым ключом от Алисы смог расшифровать
+сообщение и получил что-то разумное - значит это сообщение отправила именно Алиса, ведь только она
+могла его зашифровать, только у неё есть соответствующий закрытый ключ!
+
+Как это работает на практике. Алисе нужно переслать Бобу документ с подписью, она пересылает ему
+документ, а также зашифрованную закрытым ключоом хэш документа. Боб расшифровывает, а также сам
+вычисляет хэш-функцию и сравнивает полученные результаты. Если они совпадают, то документ именно в
+том виде, в котором Алиса хотела отправить его: если хотя бы один бит поменялся, хэш с вероятностью, близкой к единице, будет совсем другой.
 
 хеш-чеин (hash chain).
 
@@ -2779,30 +2817,23 @@ per-element private memory (registers).
 
 Теперь представим двоичное дерево, построенное по несколько похожему принципу. Пусть нижние ноды
 дерева содержат хеши данных (разбитых на блоки), для этих нод попарно вычисляется хеш от суммы (или
-объединения) их хешей, и так далее, до верхушки. Построение такой структуры выполняется за O(N)
-операций, однако проверка того, что данный блок принадлежит дереву, также дешёвая - для этого
+объединения) их хешей, и так далее, до верхушки. Построение такой структуры выполняется за $O(N \, \log N)$
+операций, однако проверка того, что данный блок принадлежит дереву, дешёвая - для этого
 достаточно посчитать хеш блока и пройтись по нодам снизу вверх, за O(log N).
 
-Электронная подпись
+proof-of-work и транзакции
 
-Представьте себе RSA-шифрование наоборот. Алиса генерирует закрытый и открытый ключи, даёт Бобу
-открытый ключ, но не ждёт зашифрованного сообщения от Боба, а сама закрытым ключом шифрует
-сообщение и передаёт Бобу. Боб, очевидно (как и все вокруг, кто слышал эти сообщения) могут
-расшифровать это сообщение. Зачем это нужно? Если Боб открытым ключом от Алисы смог расшифровать
-сообщение и получил что-то разумное - значит это сообщение отправила именно Алиса, ведь только она
-могла его зашифровать, только у неё есть соответствующий закрытый ключ!
+Пример: найти такое значение $x$, что $sha(x)$ содержит $N$ старших нулевых бит. В качестве доказательства
+предъявляется $x$ --- проверка относительно дешевая, а найти его сложно. Против спама с почтового сервера --- сервер для отправки сообщения
+просит от клиентов PoW. Большой расход энергии. Альтернатива --- капчи.
 
-Как это работает на практике. Алисе нужно переслать Бобу документ с подписью, она пересылает ему
-документ, а также зашифрованную закрытым ключоом хэш документа. Боб расшифровывает, а также сам
-вычисляет хэш-функцию и сравнивает полученные результаты. Если они совпадают, то документ именно в
-том виде, в котором Алиса хотела отправить его.
+PoW может существенно усложнить построение деревьев Меркла, при этом проверка будет по-прежнему дешёвой. ДЭГ. Легко переписать, невозможно
+проверить. Закрытая процедура использования блокчейна --- нет доступа к программам. Странности в результатах.
 
-Транзакции и proof-of-work
-
-В Bitcoin транзакции - это переводы средств с одного адреса на другой. Каждому адресу соответствует
-пара ключей (открытый и закрытый). Транзакция возможна на любой биткоин-адрес, однако тот, кто
-переводит средства со своего адреса (только он знает закрытый ключ), должен подписать транзакцию
-своей цифровой подписью.
+В Bitcoin транзакции - это переводы
+средств с одного адреса на другой. Каждому адресу соответствует пара ключей (открытый и закрытый). Транзакция возможна на любой
+биткоин-адрес, однако тот, кто переводит средства со своего адреса (только он знает закрытый ключ), должен подписать транзакцию своей
+цифровой подписью.
 
 Все блоки транзакций хранятся участниками сети в дереве Меркла, каждая нода которого дополнительно
 содержит поле для произвольных данных. Данные в этом поле можно менять, добиваясь того, чтобы хэш
@@ -2832,7 +2863,7 @@ per-element private memory (registers).
 ощущение простоты.  Scala за счёт статической строгой, поддержки pattern matching, ленивых
 вычислений и монадических интерфейсов и многих других вещей позволяет гораздо лучше изучить
 собственно программирование (и функциональное программирование!).  Кроме того, Scala даёт
-возможность писать довольно производительные программы, и вполне распространена в научной среде.
+возможность писать довольно производительные программы, и вполне распространена в научной среде (Spark).
 
 \subsubsection{Промежуточное представление и виртуальная машина}
 
@@ -3233,6 +3264,38 @@ C++? Теория категорий.
 использовать для представления доски (разрешенных полей)? Как представлять в программе поля, которые можно посетить за один ход, за два
 хода, за три? Как хранить историю (пути) для попадания в данную клетку? Можно ли использовать ленивые вычисления в данном коде? При решении
 нужно показать, что вы умеете сложную задачу разбить на совокупность простых.
+
+\textit{Семинар} Leetcode
+
+Задача про синхронизацию, 1114, Print in Order.
+Suppose we have a class:
+\begin{minted}{cpp}
+class Foo {
+public:
+  Foo() { ... }
+  public void first() { print("first"); }
+  public void second() { print("second"); }
+  public void third() { print("third"); }
+}
+\end{minted}
+The same instance of Foo will be passed to three different threads. Thread A will call first(), thread B will call second(), and thread C
+will call third(). Design a mechanism and modify the program to ensure that second() is executed after first(), and third() is executed
+after second().
+
+Решение через массив из mutex, если мы можем организовать цикл по потокам в нужном порядке: изначально готовим состояние массива, где все мьютексы
+заблокированы, потом первый делает unlock второго мьютекса, второй - третьего и т. д. Однако к задаче это не применимо. Решение. Condition
+variable. Future and promise? Jave - semaphore.
+
+\inputminted{cpp}{leetcode1114.cpp}
+
+Задача про воду. 11. Container with most water.  You are given an integer array height of length n. There are n vertical lines drawn such
+that the two endpoints of the ith line are (i, 0) and (i, height[i]).  Find two lines that together with the x-axis form a container, such
+that the container contains the most water. Return the maximum amount of water a container can store.
+
+Решение за $N^2$. Идея решения за $N$ в том, что в такой процедуре мы обязательно пройдём через максимальный объём. Если мы одной ногой на
+стенке из правильного ответа и она шагает - значит другая стенка выше (и дальше), чем стенка из правильного ответа (противоречие).
+
+\inputminted{scala}{leetcode11.scala}
 
 \subsection{Python}
 
